added more to default page

--- a/bookFace.html
+++ b/bookFace.html
@@ -9,29 +9,58 @@
     
 
     <body>
-
         <header>
-            <a class="navbar-item" href="#">
-                <img src="images/bookFACE.png" id="home" alt="BookFace"/>
-            </a>
-            <a id="title">
-                booKfaCe
-            </a>
-            <button id="button1">
-                Log Out
-            </button>
+            <div id="headerInner">
+                <a class="navbar-item" href="#">
+                    <img src="images/bookFACE.png" id="home" alt="BookFace"/>
+                </a>
+                <a id="title">
+                    booKfaCe
+                </a>
+                <a id="topLinks" href="#">
+                    home
+                </a>
+                <a id="topLinks" href="#">
+                    messages
+                </a>
+                <a id="topLinks" href="#">
+                    search
+                </a>
+                <button id="button1">
+                    Log Out
+                </button>
+            </div>
         </header>
 
         <div id="messages">
-            <p id="messageTitle">Messages</p>
-            <p class="message">message 1</p>
-            <p class="message">message 2</p>
-            <p class="message">message 3</p>
-            <a id="messagesMore" href="#">More ...</a>
+            <div id="messagesInner">
+                <p id="messageTitle">Messages</p>
+                <p class="message">message 1</p>
+                <p class="message">message 2</p>
+                <p class="message">message 3</p>
+                <a id="messagesMore" href="#">More ...</a>
+            </div>
         </div>
 
+        <div id="composePost">
+            <textarea type="text" id="postText">Type Here:</textarea>
+            <img id="composePicture" src="images/mandelbrot.png" />
+
+            <div>
+                <img id="composeIcon" src="images/image.png" />
+                <img id="composeIcon" src="images/camera.png" />
+
+                <button id="button2">
+                    Post
+                </button>
+            </div>  
+        </div>
+        
         <div id="feed">
-            <div id="post"></div>
+            asdf
+            <div id="posts">
+                <!-- add the posts here -->
+            </div>
         </div>
 
         <div id="explore"></div>
