Login page styling cleanup

--- a/public/login.html
+++ b/public/login.html
@@ -10,18 +10,18 @@
     
     <body>
         <header>
-            <!-- Navbar for creating account -->
+            <!-- Navbar -->
             <nav class="navbar" role="navigation" aria-label="main navigation">
                 <div class="navbar-menu">
-                <a class="logo" href="#">
-                    <img src="images/bookFACE.png" id="home" alt="BookFace"/>
-                </a>
-                <a class="title">
-                    BookFace
-                </a>
-                <a class="create", href="/createAccount">
-                    Create Account
-                </a>
+                    <a class="logo" href="#">
+                        <img src="images/bookFACE.png" id="home" alt="BookFace"/>
+                    </a>
+                    <a class="title">
+                        BookFace
+                    </a>
+                    <a class="create", href="/createAccount">
+                        Create Account
+                    </a>
                 </div>
             </nav>
         </header>
@@ -54,7 +54,7 @@
                     </div>
                 </div>
 
-                <!-- Button -->
+                <!-- Login Button -->
                 <div class="field is-grouped">
                     <div class="control">
                         <button class="button is-link">
@@ -64,9 +64,5 @@
                 </div>
             </form>
         </div>
-
-
     </body>
-
-
 </html>
