started mongoose implementation. not yet functional

--- a/public/bookFace.html
+++ b/public/bookFace.html
@@ -42,14 +42,14 @@
         </div>
 
         <div id="composePost">
-            <textarea type="text" id="postText">Type Here:</textarea>
+            <textarea type="text" id="postText" href="/composePost">Type Here:</textarea>
             <img id="composePicture" src="images/mandelbrot.png" />
 
             <div>
                 <img id="composeIcon" src="images/image.png" />
                 <img id="composeIcon" src="images/camera.png" />
 
-                <button id="button2">
+                <button id="button2" href="/postButton">
                     Post
                 </button>
             </div>  
