Cleaned up post schema and added function to get the gender from the radio button

--- a/public/createAccount.html
+++ b/public/createAccount.html
@@ -77,15 +77,15 @@
                         Gender
                     </label>
                     <label class="radio">
-                        <input type="radio" name="answer">
+                        <input type="radio" name="answer" value="Female" id="genderRadio1">
                         Female
                     </label>
                     <label class="radio">
-                        <input type="radio" name="answer">
+                        <input type="radio" name="answer" value="Male" id="genderRadio2">
                         Male
                     </label>
                     <label class="radio">
-                        <input type="radio" name="answer">
+                        <input type="radio" name="answer" value="Other" id="genderRadio3">
                         Other
                     </label>
                 </div>
