--- a/public/bookFace.html
+++ b/public/bookFace.html
@@ -41,7 +41,7 @@
             </div>
         </div>
 
-        <form method="post" action="/postButton" id="composePost">
+        <form method="post" action="postButton" id="composePost" enctype="multipart/form-data">
             <input type="text" name="textfield" id="postText" href="/composePost" placeholder="Type Here:"></textarea>
             <img id="composePicture" src="images/mandelbrot.png"/>
 
