fixed time formatting for posts

--- a/public/bookFace.html
+++ b/public/bookFace.html
@@ -49,9 +49,8 @@
                 <!--<img id="composeIcon" src="images/image.png"/>-->
                 <!--<img id="composeIcon" src="images/camera.png"/>-->
                 <input type="file" name="filetoupload"/>
-                <input type="submit" id="button2"><!-- href="/postButton"> -->
-                    Post
-                </button>
+                <input type="submit" id="button2" value="Post"><!-- href="/postButton"> -->
+                </input>
             </div>  
         </form>
         
