Added success and failure pages for logging in or creating an account

--- a/public/createAccountFailure.html
+++ b/public/createAccountFailure.html
@@ -28,7 +28,7 @@
 
         <div class="createAccount">
             <div class="content">
-                Welcome to BookFace! If you are a new user, please provide the necessary information below to sign up!
+                Sorry! Looks like an error occured creating your account. Please ensure all necessary information is provided and inputted correctly.
             </div>
             <form method="post", class="form-vertical">
                 <div class="field">
