--- a/public/bookFace.html
+++ b/public/bookFace.html
@@ -37,7 +37,7 @@
                 <p class="message">message 1</p>
                 <p class="message">message 2</p>
                 <p class="message">message 3</p>
-                <a id="messagesMore" href="#">More ...</a>
+                <a id="messagesMore" href="/messages">More ...</a>
             </div>
         </div>
 
