--- a/public/loginFailure.html
+++ b/public/loginFailure.html
@@ -37,7 +37,7 @@
                         Username
                     </label>
                     <div class="control has-icons-left">
-                        <input class="input is-dark">
+                        <input class="input is-dark" required>
                         <span class="icon is-small is-left">
                             <i class="fas fa-user"></i>
                         </span>
@@ -47,7 +47,7 @@
                         Password
                     </label>
                     <div class="control has-icons-left">
-                        <input class="input is-dark">
+                        <input class="input is-dark" required>
                         <span class="icon is-small is-left">
                             <i class="fas fa-key"></i>
                         </span>
