Minor change - Making password field a password type

--- a/public/loginFailure.html
+++ b/public/loginFailure.html
@@ -47,7 +47,7 @@
                         Password
                     </label>
                     <div class="control has-icons-left">
-                        <input class="input is-dark" required>
+                        <input class="input is-dark"  type="password" required>
                         <span class="icon is-small is-left">
                             <i class="fas fa-key"></i>
                         </span>
