--- a/public/bookFace.html
+++ b/public/bookFace.html
@@ -22,8 +22,8 @@
                 <a id="topLinks" href="/messages">
                     messages
                 </a>
-                <a id="topLinks" href="#">
-                    search
+                <a id="topLinks" href="/news">
+                    news
                 </a>
                 <button id="button1">
                     Log Out
@@ -33,10 +33,19 @@
 
         <div id="messages">
             <div id="messagesInner">
-                <p id="messageTitle">Messages</p>
-                <p class="message">message 1</p>
-                <p class="message">message 2</p>
-                <p class="message">message 3</p>
+                    <p id="messageTitle">Messages</p>
+                <a id="messageblock" href="/messages">
+                    <p id="sender">sender 1</p>
+                    <p id="message">message 1</p>
+                </a>
+                <a id="messageblock" href="/messages">
+                    <p id="sender">sender 2</p>
+                    <p id="message">message 2</p>
+                </a>
+                <a id="messageblock" href="/messages">
+                    <p id="sender">sender 3</p>
+                    <p id="message">message 3</p>
+                </a>
                 <a id="messagesMore" href="/messages">More ...</a>
             </div>
         </div>
@@ -74,7 +83,10 @@
         </div>
 
         <div id="explore">
-    
+            <p id="exploretitle">Explore</p>
+            <div id="newstitle">
+                News
+            </div>
         </div>
         
     </body>
