--- a/public/createAccountFailure.html
+++ b/public/createAccountFailure.html
@@ -30,7 +30,7 @@
             <div class="content">
                 Sorry! Looks like an error occured creating your account. Please ensure all necessary information is provided and inputted correctly.
             </div>
-            <form method="post", class="form-vertical">
+            <form method="post", action="/createAccount", class="form-vertical">
                 <div class="field">
                     <!-- Username -->
                     <label class="label" for="username">
