Changed some tag types

--- a/public/messages.html
+++ b/public/messages.html
@@ -36,10 +36,10 @@
                     <div id="history">
 
                     </div>
-                    <a id="senttime">5:48pm</a>
-                    <p id="messagecontent">
+                    <div id="senttime">5:48pm</div>
+                    <div id="messagecontent">
                         Hey buddy, hope you are doing well!
-                    </p>
+                    </div>
                 </div>
                 <!-- text box goes here from javascript -->
             </div>
