Displaying a news article on the home page

--- a/public/bookFace.html
+++ b/public/bookFace.html
@@ -82,11 +82,13 @@
             </div>
         </div>
 
+        <!-- News -->
         <div id="explore">
             <p id="exploretitle">Explore</p>
             <div id="newstitle">
                 News
             </div>
+            <div class="newsArticles"></div>
         </div>
         
     </body>
