fixed empty text bug with post form

--- a/public/bookFace.html
+++ b/public/bookFace.html
@@ -51,7 +51,7 @@
         </div>
 
         <form method="post" action="postButton" id="composePost" enctype="multipart/form-data">
-            <input type="text" name="textfield" id="postText" placeholder="Type Here:" />
+            <input type="text" name="textfield" id="postText" href="/composePost" placeholder="Type Here:"></input>
             <img id="composePicture" src="images/mandelbrot.png"/>
 
             <div>
@@ -66,19 +66,6 @@
         <div id="feed">
             <div id="posts">
                 <!-- add the posts here -->
-                <!--<div id="post">
-                    <image id="postpic" src="images/mandelbrot.png" height="35" />
-                    <div id="postname">Spencer</div>
-                    <div id="posttime">1:29am 10/04/2020</div>
-                    <p id="postcontent">
-                        Hello I am Spencer and this is a post. Haha twitter no edit button.
-                        This is the default post that everyone will see!
-                    </p>
-                    <img class="likebutton" id="likebutton" src="images/heart.png" height="20"/>
-                    <a class="likecount" id="likes">0</a>
-                    <img src="images/comment.png" height="20"/>
-                    <a id="comments">0</a>
-                </div>-->
             </div>
         </div>
 
