user now must be logged in to see home page, and can log out via "logout" button

--- a/public/bookFace.html
+++ b/public/bookFace.html
@@ -25,9 +25,11 @@
                 <a id="topLinks" href="/news">
                     news
                 </a>
-                <button id="button1">
-                    Log Out
-                </button>
+                <form action="/logout">
+                    <button id="button1">
+                        Log Out
+                    </button>
+                </form>
             </div>
         </header>
 
