Adding paths in navbar and logout button

--- a/public/createAccountSuccess.html
+++ b/public/createAccountSuccess.html
@@ -25,6 +25,15 @@
                     <a class="title">
                         Profile
                     </a>
+                    <a class="title" href="/messages">
+                        Messages
+                    </a>
+                    <a class="title" href="/news">
+                        News
+                    </a>
+                    <a class="logout", href="/logout">
+                        Log Out
+                    </a>
                 </div>
             </nav>
         </header>
