--- a/public/news.html
+++ b/public/news.html
@@ -16,17 +16,23 @@
         <!-- Navbar -->
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-menu">
-                <a class="logo" href="bookFace.html">
+                <a class="logo" href="/home">
                     <img src="images/bookFACE.png" id="home" alt="BookFace"/>
                 </a>
-                <a class="title" href="bookFace.html">
+                <a class="title" href="/home">
                     BookFace
                 </a>
-                <a class="title" href="bookFace.html">
+                <a class="title" href="/home">
                     Home
                 </a>
                 <a class="title">
                     Profile
+                </a>
+                <a class="title" href="/messages">
+                    Messages
+                </a>
+                <a class="logout", href="/logout">
+                    Log Out
                 </a>
             </div>
         </nav>
