added profile area on home page

--- a/public/bookFace.html
+++ b/public/bookFace.html
@@ -32,6 +32,12 @@
                 </form>
             </div>
         </header>
+        
+        <a id="profilewrap" href="/profile">    
+            <div id="profile"> Profile </div>
+            <img id="profilepicture" src="images/mandelbrot.png" />
+            <div id="username" >UserName</div>
+        </a>
 
         <div id="messages">
             <div id="messagesInner">
