--- a/public/createAccountSuccess.html
+++ b/public/createAccountSuccess.html
@@ -4,7 +4,7 @@
         <title>Create Account</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"/>
         <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-        <script type="text/javascript" src="createAccount.js"></script>
+        <script type="text/javascript" src="createAccountSuccess.js"></script>
         <link type="text/css" rel="stylesheet" href="createAccount.css"/>
     </head>
     
@@ -22,7 +22,7 @@
                     <a class="title" href="/home">
                         Home
                     </a>
-                    <a class="title">
+                    <a class="title" href="/profile">
                         Profile
                     </a>
                     <a class="title" href="/messages">
@@ -39,7 +39,7 @@
         </header>
 
         <div class="createAccount">
-            <div class="content">
+            <div class="messageSuccess">
                 Congratulations! You have successfully registered an account with BookFace! You can now select the 'Home' 
                 option from the navbar to view your timeline or the 'Profile' option to view your profile.
             </div>
