--- a/public/loginSuccess.html
+++ b/public/loginSuccess.html
@@ -4,7 +4,7 @@
         <title>Login</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"/>
         <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-        <script type="text/javascript" src="login.js"></script>
+        <script type="text/javascript" src="loginSuccess.js"></script>
         <link type="text/css" rel="stylesheet" href="login.css" />
     </head>
     
@@ -22,7 +22,7 @@
                     <a class="title" href="/home">
                         Home
                     </a>
-                    <a class="title">
+                    <a class="title" href="/profile">
                         Profile
                     </a>
                     <a class="title" href="/messages">
@@ -39,9 +39,7 @@
         </header>
 
         <div class="login">
-            <div class="content">
-                Congratulations! You have successfully logged in! You can now select the 'Home' 
-                option from the navbar to view your timeline or the 'Profile' option to view your profile.
+            <div class="messageSuccess">
             </div>
         </div>
     </body>
