--- a/public/news.html
+++ b/public/news.html
@@ -25,7 +25,7 @@
                 <a class="title" href="/home">
                     Home
                 </a>
-                <a class="title">
+                <a class="title" href="/profile">
                     Profile
                 </a>
                 <a class="title" href="/messages">
